# ESP8266_Shutters_2

./: .gitignore  CMakeLists.txt  README.md  copy_to_upgrade.bat  first_build_config.bat  menuconfig.sh  sdkconfig
components/common/: CMakeLists.txt
components/common/include/: device_settings.h
components/malloc_logger/: CMakeLists.txt
components/malloc_logger/include/: malloc_logger.h
components/ota/: CMakeLists.txt  ota.c
components/ota/include/: ota.h
components/project_common/: CMakeLists.txt
components/project_common/include/: device_settings.h  global_definitions.h.in
components/project_events/: CMakeLists.txt  events.c
components/project_events/include/: events.h
components/project_ota/: CMakeLists.txt  ota.c
components/project_ota/include/: ota.h
components/project_utils/: CMakeLists.txt  utils.c
components/project_utils/include/: utils.h
components/utils/: CMakeLists.txt  utils.c
main/: CMakeLists.txt  main.c  user_main.c  utils.c
main/include/: main.h  user_main.h  utils.h
